5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/3960/executions/1735_2519.log
== TEST (2019-05-20 18:13:49) 
-- CODE:
h = float(input("Altura da Torre da Lua: "))
qtd1 = float(input("Quantidade de metros que Equecrates sobe: "))
qtd2 = float(input("Quantidade de metos que Antistenes faz o guerreiro descer: "))
qtdAltura = qtd1
t = 0

while(qtdAltura >= h):
	qtdAltura = qtdAltura - qtd2
	t = t + 1
	qtdAltura = qtdAltura + qtd1
	
print(t)
-- OUTPUT:
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-20 18:14:10) 
-- CODE:
h = float(input("Altura da Torre da Lua: "))
qtd1 = float(input("Quantidade de metros que Equecrates sobe: "))
qtd2 = float(input("Quantidade de metos que Antistenes faz o guerreiro descer: "))
qtdAltura = qtd1
t = 0

while(qtdAltura <= h):
	qtdAltura = qtdAltura - qtd2
	t = t + 1
	qtdAltura = qtdAltura + qtd1
	
print(t)
-- OUTPUT:
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-20 18:17:40) 
-- CODE:
h = float(input("Altura da Torre da Lua: "))
qtd1 = float(input("Quantidade de metros que Equecrates sobe: "))
qtd2 = float(input("Quantidade de metos que Antistenes faz o guerreiro descer: "))
qtdAltura = qtd1
t = 0

while(qtdAltura <= h):
	qtdAltura = qtdAltura - qtd2
	t = t + 1
	qtdAltura = qtdAltura + qtd1
	
print(t)
-- EXECUTION TIME:
0.13038
-- TEST CASE 1:
---- input:
15
2
1
---- correct output:
14
---- user output:
14
-- TEST CASE 2:
---- input:
15
3
1
---- correct output:
7
---- user output:
7
-- TEST CASE 3:
---- input:
66
56
23

---- correct output:
2
---- user output:
1
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-20 18:19:12) 
-- CODE:
h = float(input("Altura da Torre da Lua: "))
qtd1 = float(input("Quantidade de metros que Equecrates sobe: "))
qtd2 = float(input("Quantidade de metos que Antistenes faz o guerreiro descer: "))
qtdAltura = qtd1
t = 1

while(qtdAltura <= h):
	qtdAltura = qtdAltura - qtd2
	t = t + 1
	qtdAltura = qtdAltura + 
	
print(t)
-- EXECUTION TIME:
0.192183
-- ERROR:
  File "/home/codebench/codes/1735/2519/main.py", line 10
    qtdAltura = qtdAltura + 
                           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-20 18:31:50) 
-- CODE:
h = float(input("Altura da Torre da Lua: "))
qtd1 = float(input("Quantidade de metros que Equecrates sobe: "))
qtd2 = float(input("Quantidade de metos que Antistenes faz o guerreiro descer: "))
qtdAltura = qtd1
t = 1

while(qtdAltura <= h):
	qtdAltura = qtdAltura + qtd1
	if(qtdAltura < h):
		qtdAltura = qtdAltura - qtd2
	t = t + 1
	
print(t)
-- OUTPUT:
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-20 18:31:55) 
-- CODE:
h = float(input("Altura da Torre da Lua: "))
qtd1 = float(input("Quantidade de metros que Equecrates sobe: "))
qtd2 = float(input("Quantidade de metos que Antistenes faz o guerreiro descer: "))
qtdAltura = qtd1
t = 1

while(qtdAltura <= h):
	qtdAltura = qtdAltura + qtd1
	if(qtdAltura < h):
		qtdAltura = qtdAltura - qtd2
	t = t + 1
	
print(t)
-- EXECUTION TIME:
0.152278
-- TEST CASE 1:
---- input:
15
2
1
---- correct output:
14
---- user output:
14
-- TEST CASE 2:
---- input:
15
3
1
---- correct output:
7
---- user output:
7
-- TEST CASE 3:
---- input:
66
56
23

---- correct output:
2
---- user output:
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
